--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@mui/icons-material": "^5.15.3",
     "@mui/lab": "^5.0.0-alpha.160",
     "@mui/material": "^5.15.4",
-    "axios": "^1.6.5",
-    "next": "14.0.4",
+    "axios": "^1.6.7",
+    "formik": "^2.4.5",
+    "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "recharts": "^2.10.3",
-    "sweetalert2": "^11.10.2"
+    "sweetalert2": "^11.10.2",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
